# pi-meshcore

./: .gitattributes  .gitignore  AGENTS.md  NOTICE  Prompts.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
.continue/: config.json  get_tree.py
.continue/mcpServers/: desktop-commander-mcp.yaml
.continue/rules/: 01-system-constraints.md  02-execution-protocol.md  03-use-desktop-commander-mcp.md  04-use-native-edit-tools.md
.prompts/: repo_analyst.prompt  repo_analyst_d.prompt
configs/continue/: config_lmstudio.yaml
src/: __init__.py
src/cli/: __init__.py  check_hardware.py
src/drivers/: __init__.py  lora_detection.py  lora_module.py
tests/: __init__.py  conftest.py  fakes.py  test_check_hardware_cli.py  test_fakes.py  test_lora_module.py  test_lora_module_detection.py  test_lora_module_detector.py
